# PSN

./: .gitignore  CMakeLists.txt  Makefile  _VALGRIND_LOG.txt  _extra.c  _extra.h  sequenza_chiamate.txt  tracciato.txt
Files/: Makefile  builtin_v1.c  builtin_v1.h  command_v1.c  command_v1.h  execute_bunch.c  fstr_man.c  fstr_man.h  fvec2_man.c  fvec2_man.h  fvec_man.c  fvec_man.h  minishell  minishell.c  minishell.h  parser_man.c  parser_man.h  pipeline_man.c  pipeline_man.h  tmp_utils.c  tmp_utils.h  token_man.c  token_man.h  token_man_1.c  tracciato.txt  utility.c  utility.h
Files/env/: env.c  env.h  env_utils.c
